--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,9 +26,12 @@
         "Command Prompt": {
             "path": ["${env:windir}\\System32\\cmd.exe"],
             "env": { 
-                "PATH": "D:\\Softwares\\PortableGit\\bin;D:\\Softwares\\winlibs-x86_64-posix-seh-gcc-11.2.0-mingw-w64-9.0.0-r1\\mingw64\\bin;D:\\Softwares\\cmake-3.29.3-windows-x86_64\\bin"
+                "PATH": "D:\\Softwares\\PortableGit\\bin;${env:USERPROFILE}\\Downloads\\arm-gnu-toolchain-12.2.rel1-mingw-w64-i686-aarch64-none-elf\\arm-gnu-toolchain-12.2.rel1-mingw-w64-i686-aarch64-none-elf\\bin;D:\\Softwares\\cmake-3.29.3-windows-x86_64\\bin"
             }
         }
     },
     "terminal.integrated.defaultProfile.windows": "Command Prompt"
 }
+
+
+C:\Users\19081126D\Downloads\
