--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,6 @@
 {
     "recommendations": [
-        "ms-vscode.cmake-tools",
+        "ms-python.python",
         "github.vscode-github-actions",
         "ms-vscode.cpptools"
     ]
