--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,8 +30,8 @@
             }
         }
     },
-    "terminal.integrated.defaultProfile.windows": "Command Prompt"
+    "terminal.integrated.defaultProfile.windows": "Command Prompt",
+    "python.defaultInterpreterPath": "${env:USERPROFILE}/Downloads/python-3.10.8-amd64-portable/python.exe"
 }
 
 
-C:\Users\19081126D\Downloads\
